codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__status_line_setup__tests__setup_view_snapshot_includes_hostname.snap
---
source: tui/src/bottom_pane/status_line_setup.rs
expression: "render_lines(&view,\n100).lines().map(str::trim_end).collect::<Vec<_>>().join(\"\\n\")"
---

  Configure Status Line
  Select which items to display in the status line.

  Type to search

› [x] Use theme colors      Apply colors from the active /theme
  ───────────────────────
  [x] hostname              Current machine hostname (omitted when unavailable)
  [x] current-dir           Current working directory
  [ ] model                 Current model, or Lead/Worker profiles in Team mode
  [ ] model-with-reasoning  Current model with reasoning, or Lead/Worker profiles in Team mode
  [ ] reasoning             Current reasoning level, or Lead/Worker levels in Team mode
  [ ] project-name          Project name (omitted when unavailable)
↓
  ssh-build-01.example.com · ~/codex-rs
  space toggle · ←/→ reorder · enter save · esc cancel
